--- a/Agregator/Agregator.vcxproj
+++ b/Agregator/Agregator.vcxproj
@@ -128,12 +128,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Agregator.cpp" />
+    <ClCompile Include="AgregatorClass.cpp" />
     <ClCompile Include="Consumer.cpp" />
+    <ClCompile Include="Network.cpp" />
     <ClCompile Include="Node.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Agregator.h" />
     <ClInclude Include="Consumer.h" />
     <ClInclude Include="Message.h" />
+    <ClInclude Include="Network.h" />
     <ClInclude Include="Node.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
