--- a/Agregator/Agregator.vcxproj
+++ b/Agregator/Agregator.vcxproj
@@ -133,6 +133,8 @@
   <ItemGroup>
     <ClCompile Include="Agregator.cpp" />
     <ClCompile Include="AgregatorClass.cpp" />
+    <ClCompile Include="CircularBuffer.cpp" />
+    <ClCompile Include="ThreadPool.cpp" />
     <ClCompile Include="Consumer.cpp" />
     <ClCompile Include="Network.cpp" />
     <ClCompile Include="Node.cpp" />
@@ -140,6 +142,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agregator.h" />
+    <ClInclude Include="CircularBuffer.h" />
+    <ClInclude Include="ThreadPool.h" />
     <ClInclude Include="Consumer.h" />
     <ClInclude Include="Network.h" />
     <ClInclude Include="Node.h" />
